Fixing code blocks to be more readable.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -236,7 +236,8 @@ code, pre {
 code {
   background-color: #f2f2f2;
   border: solid 1px #ddd;
-  padding: 0 3px;
+  padding: 3px;
+  text-shadow: none;
 }
 
 pre {
